@@ -37,6 +37,9 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [Loader] Added support to load CSV files from URL
   * [Loader] Added configurable gapi_credentials
   * [Loader] Added configurable gapi_token
+  * [Agents] Add authentication mechanism for Radius (PAP, CHAP,
+    MSCHAPV2)
+  * [SessionS] Update subflags for *rals ( *authorize and *initiate )
 
  -- Alexandru Tripon <alexandru.tripon@itsyscom.com>  Wed, 19 Feb 2020 13:25:52 +0200
 
